Add cronicle widget

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1007,5 +1007,11 @@
         "issues": "Issues",
         "merges": "Merge Requests",
         "projects": "Projects"
+    },
+    "cronicle": {
+      "success": "Success",
+      "failed": "Failed",
+      "lastSuccess": "Last success",
+      "lastFailed": "Last Failed"
     }
 }
