Add SilverBullet widget

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1007,5 +1007,11 @@
         "issues": "Issues",
         "merges": "Merge Requests",
         "projects": "Projects"
+    },
+    "silverbullet": {
+      "pages": "Pages",
+      "last_modified": "Last Modified",
+      "size": "Size",
+      "attachments": "Attachments"
     }
 }
